In issueTable.jsp, createdOn column will now be hidden on small displays.

--- a/src/main/webapp/styles/cinemang.css
+++ b/src/main/webapp/styles/cinemang.css
@@ -30,7 +30,7 @@ div.ui-datepicker{
 .ui-dialog {font-size: 11pt;}
 /* JQuery */
 
-.js-example-basic-single {padding-right: 24px; width: 100%}
+.js-example-basic-single {padding-right: 24px; width: 96%}
 
 .clickable {cursor: pointer;}
 .clickable:hover {text-decoration: underline}
@@ -47,7 +47,8 @@ div.ui-datepicker{
 
 @media (max-width: 399px)
 {
-    .mdl-card {margin: 0;}
+    .mdl-card {margin: 0; width: 100%;}
+    .hideOnSmall {display:none;}
 }
 /* Material */
 
